--- a/package.json
+++ b/package.json
@@ -218,7 +218,12 @@
     "ts-jest": "^29.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest __tests__/unit",
+    "test:integration": "jest __tests__/integration",
+    "test:scenarios": "jest __tests__/scenarios"
   },
   "keywords": [],
   "author": "",
