--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:unit": "jest --config jest.config.js **tests**/unit/core/error",
+    "test:player": "jest --roots=src src/domain/player --coverage=false",
     "prepare": "npm run build"
   },
   "directories": {
@@ -17,7 +18,11 @@
     "dist": "dist"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.3.0",
