--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:phase:coverage": "jest --config jest.config.js src/domain/phase/__tests__/PhaseManager.test.js --coverage",
     "test:action": "NODE_OPTIONS=--experimental-vm-modules jest src/domain/action/__tests__",
     "test:vote": "NODE_OPTIONS=--experimental-vm-modules jest src/domain/vote/__tests__",
-    "test:action:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.js src/domain/action/__tests__/Action.test.js --coverage"
+    "test:action:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.js src/domain/action/__tests__/Action.test.js --coverage",
+    "test:victory": "NODE_OPTIONS=--experimental-vm-modules jest src/domain/victory/__tests__"
   },
   "directories": {
     "doc": "docs",
